[gd_scene load_steps=4 format=3 uid="uid://dla0em8g82nya"]

[ext_resource type="Script" uid="uid://djstya8y004so" path="res://addons/github-ui/scripts/link_remote_repository.gd" id="1_y6a6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6a6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c5dq"]

[node name="Link Remote Repository" type="Window"]
transparent_bg = true
oversampling_override = 1.0
title = "Link Remote Repository"
initial_position = 1
size = Vector2i(512, 512)
transparent = true
theme_override_styles/embedded_border = SubResource("StyleBoxEmpty_y6a6c")
theme_override_styles/embedded_unfocused_border = SubResource("StyleBoxEmpty_3c5dq")
script = ExtResource("1_y6a6c")

[node name="Control" type="Control" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75686276)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_right = 126.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Enter your GitHub username."
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="Control/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -15.5
offset_right = 192.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_right = 126.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Enter the remote repository name."
horizontal_alignment = 1

[node name="RepoName" type="LineEdit" parent="Control/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -15.5
offset_right = 192.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control3" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_right = 126.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Provide a Personnal Access Token for this repository."
horizontal_alignment = 1

[node name="Token" type="LineEdit" parent="Control/VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -15.5
offset_right = 192.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control4" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LinkButton" type="Button" parent="Control/VBoxContainer/Control4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Link"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="tree_entered" from="Control/VBoxContainer/Control/Username" to="." method="_on_url_input_tree_entered"]
[connection signal="tree_entered" from="Control/VBoxContainer/Control2/RepoName" to="." method="_on_url_input_tree_entered"]
[connection signal="tree_entered" from="Control/VBoxContainer/Control3/Token" to="." method="_on_url_input_tree_entered"]
[connection signal="pressed" from="Control/VBoxContainer/Control4/LinkButton" to="." method="_on_link_button_pressed"]
